--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "@frontend.js/core",
   "version": "0.0.1",
   "description": "Framework to allow for the creation of simple components",
-  "main": "index.js",
+  "main": "dist/component.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production",
+    "dev": "webpack --mode=development"
   },
   "repository": {
     "type": "git",
